# Home-Credit-Default-Risk

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  deploy.py  dvc.yaml  main.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci-cd.yml
.hydra/: config.yaml  hydra.yaml
Home-Credit-Default-Risk/: .gitignore  pyproject.toml
Home-Credit-Default-Risk/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
Home-Credit-Default-Risk/catboost_info/learn/: events.out.tfevents
Home-Credit-Default-Risk/catboost_info/test/: events.out.tfevents
Home-Credit-Default-Risk/conf/: config.yaml
Home-Credit-Default-Risk/docs/: Makefile  index.rst
Home-Credit-Default-Risk/notebooks/: ml-project.ipynb
Home-Credit-Default-Risk/reports/: final_summary.json
Home-Credit-Default-Risk/src/training/: process_data.py  trainer.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
conf/: config.yaml
docs/: conf.py  make.bat
notebooks/: ml-project.ipynb
reports/: final_summary.json
scripts/: lint.sh
src/: logger.py
src/serving/: app.py  inference.py  load_to_motherduck.py  predict_batch.py
src/training/: download_data.py  evaluate.py  inference.py  process_data.py  train.py  trainer.py
