[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "catboost>=1.2.7",
    "cookiecutter>=2.7.1",
    "dagshub>=0.7.0",
    "duckdb>=1.5.2",
    "dvc>=3.67.1",
    "dvc-s3>=3.3.0",
    "hydra-core>=1.3.2",
    "joblib>=1.5.3",
    "kagglehub>=1.0.1",
    "litserve>=0.2.17",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "numpy<2.0.0",
    "omegaconf>=2.3.0",
    "optuna>=4.8.0",
    "pandas<3.0.0",
    "prefect>=3.7.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # E=pycodestyle, F=pyflakes, I=isort

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "ruff>=0.15.12",
]
