[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "catboost>=1.2.7",
    "cookiecutter>=2.7.1",
    "hydra-core>=1.3.2",
    "joblib>=1.5.3",
    "kagglehub>=1.0.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "numpy<2.0.0",
    "omegaconf>=2.3.0",
    "optuna>=4.8.0",
    "pandas<3.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
